notifcation email & verification account
Notification emails and verification account creation

--- a/src/main/resources/emails/notify.html
+++ b/src/main/resources/emails/notify.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta name="viewport" content="width=600, initial-scale=0.5"/>
-		<title>Scoold Mail</title>
+		<title>SecuTix community Mail</title>
 		<style type="text/css">
 			body{width:100% !important;} .ReadMsgBody{width:100%;} .ExternalClass{width:100%;}
 			body{-webkit-text-size-adjust:none;}
@@ -66,11 +66,11 @@
 				font-size:22px;
 			}
 			#templateHeader{
-				background-color:#FFFFFF;
+				background-color:#607D8B;
 				border-bottom:0;
 			}
 			#templateContainer, .bodyContent{
-				background-color:#FFFFFF;
+				background-color:#607D8B;
 			}
 			.bodyContent{
 				color:#333333;
@@ -114,11 +114,11 @@
 												<!-- // Begin Module: Standard Content \\ -->
 												<table border="0" cellpadding="0" cellspacing="0" width="100%">
 													<tr>
-														<td class="center" style="text-align: center; padding-bottom: 30px;">
+														<!--td class="center" style="text-align: center; padding-bottom: 30px;">
 															{{#logourl}}
 															<img src="{{logourl}}" alt="logo" width="110">
 															{{/logourl}}
-														</td>
+														</td-->
 													</tr>
 													<tr>
 														<td>
@@ -147,8 +147,8 @@
 															<p style="text-align:center;">
 																<small class="bodyContent">You are receiving this because you have enabled email
 																	notifications for your account.</small><br>
-																<a href="https://scoold.com">Scoold.com</a> &bull;
-																<a href="https://twitter.com/getscoold">Scoold on Twitter</a>
+																<a href="https://secutixflow.herokuapp.com">SecuTix community</a> &bull;
+																<!--a href="https://twitter.com/getscoold">Scoold on Twitter</a-->
 															</p>
 														</td>
 													</tr>
