--- a/src/main/resources/emails/notify.html
+++ b/src/main/resources/emails/notify.html
@@ -66,11 +66,11 @@
 				font-size:22px;
 			}
 			#templateHeader{
-				background-color:#607D8B;
+				background-color:#FFFFFF;
 				border-bottom:0;
 			}
 			#templateContainer, .bodyContent{
-				background-color:#607D8B;
+				background-color:#FFFFFF;
 			}
 			.bodyContent{
 				color:#333333;
